--- a/ocr-test-qrcode.html
+++ b/ocr-test-qrcode.html
@@ -112,41 +112,6 @@
 
         let currentFile = null;
 
-        // 지원할 포맷 명시적 설정
-        const supportedFormats = [
-            Html5QrcodeSupportedFormats.QR_CODE,
-            Html5QrcodeSupportedFormats.CODE_128,
-            Html5QrcodeSupportedFormats.CODE_39,
-            Html5QrcodeSupportedFormats.CODE_93,
-            Html5QrcodeSupportedFormats.EAN_13,
-            Html5QrcodeSupportedFormats.EAN_8,
-            Html5QrcodeSupportedFormats.UPC_A,
-            Html5QrcodeSupportedFormats.UPC_E,
-            Html5QrcodeSupportedFormats.ITF,
-            Html5QrcodeSupportedFormats.CODABAR
-        ];
-
-        // 포맷 이름 매핑
-        const formatNames = {
-            0: 'QR Code',
-            1: 'Aztec',
-            2: 'Codabar',
-            3: 'Code 39',
-            4: 'Code 93',
-            5: 'Code 128',
-            6: 'Data Matrix',
-            7: 'MaxiCode',
-            8: 'ITF',
-            9: 'EAN-13',
-            10: 'EAN-8',
-            11: 'PDF 417',
-            12: 'RSS-14',
-            13: 'RSS Expanded',
-            14: 'UPC-A',
-            15: 'UPC-E',
-            16: 'UPC/EAN Extension'
-        };
-
         function toggleRaw() {
             rawResultEl.style.display = rawResultEl.style.display === 'none' ? 'block' : 'none';
         }
@@ -202,37 +167,22 @@
             const startTime = Date.now();
 
             try {
-                // Html5Qrcode 인스턴스 생성 (포맷 지정 + 네이티브 API 사용)
-                const html5QrCode = new Html5Qrcode("qr-reader", {
-                    formatsToSupport: supportedFormats,
-                    verbose: false,
-                    useBarCodeDetectorIfSupported: true
-                });
-
-                // scanFileV2 사용하여 포맷 정보도 함께 획득
-                const result = await html5QrCode.scanFileV2(currentFile, false);
+                // 단순한 방식 (원래 작동하던 코드)
+                const html5QrCode = new Html5Qrcode("qr-reader", { verbose: false });
+                const result = await html5QrCode.scanFile(currentFile, true);
                 const elapsed = ((Date.now() - startTime) / 1000).toFixed(2);
 
-                const decodedText = result.decodedText;
-                const format = result.result?.format;
-                const formatName = formatNames[format] || `Unknown (${format})`;
-                const isQR = format === 0;
-
-                serialEl.textContent = decodedText;
-                formatDetectedEl.innerHTML = `<span class="${isQR ? 'format-qr' : 'format-barcode'}">${formatName}</span>`;
-
-                rawResultEl.textContent = `Decoded Text: ${decodedText}\nFormat: ${formatName}\nFormat Code: ${format}\n\nScan successful!`;
+                serialEl.textContent = result;
+                formatDetectedEl.innerHTML = '<span class="format-qr">Detected</span>';
+                rawResultEl.textContent = `Decoded Text: ${result}\n\nScan successful!`;
                 status.textContent = 'Done!';
                 timeEl.textContent = `Time: ${elapsed}s`;
-
-                // 스캐너 정리
-                await html5QrCode.clear();
 
             } catch (err) {
                 const elapsed = ((Date.now() - startTime) / 1000).toFixed(2);
                 serialEl.textContent = '(Not found)';
                 formatDetectedEl.innerHTML = '';
-                rawResultEl.textContent = `Error: ${err}\n\nNo QR code or barcode detected.\n\nTips:\n- 이미지가 선명한지 확인\n- QR/바코드가 잘 보이는지 확인\n- 조명이 충분한지 확인`;
+                rawResultEl.textContent = `Error: ${err}\n\nNo QR code or barcode detected.`;
                 status.textContent = 'Not detected';
                 timeEl.textContent = `Time: ${elapsed}s`;
             }
