--- a/ocr-test-llm.html
+++ b/ocr-test-llm.html
@@ -44,7 +44,17 @@
             <label>Select LLM Provider</label>
             <select id="provider">
                 <option value="anthropic">Anthropic Claude</option>
-                <option value="openai">OpenAI GPT-4</option>
+                <option value="openai">OpenAI GPT</option>
+            </select>
+
+            <label>Model</label>
+            <select id="model">
+                <!-- Claude models -->
+                <option value="claude-3-5-haiku-20241022" data-provider="anthropic">Claude 3.5 Haiku (Fast)</option>
+                <option value="claude-sonnet-4-20250514" data-provider="anthropic">Claude Sonnet 4 (Smart)</option>
+                <!-- OpenAI models -->
+                <option value="gpt-4o-mini" data-provider="openai">GPT-4o Mini (Fast)</option>
+                <option value="gpt-4o" data-provider="openai">GPT-4o (Smart)</option>
             </select>
 
             <label>API Key</label>
@@ -96,10 +106,32 @@
         const timeEl = document.getElementById('time');
         const apiKeyInput = document.getElementById('apiKey');
         const providerSelect = document.getElementById('provider');
+        const modelSelect = document.getElementById('model');
         const sizeInfo = document.getElementById('sizeInfo');
 
         let imageBase64 = null;
         let mediaType = 'image/jpeg';
+
+        // 모델 필터링 함수
+        function filterModels(provider) {
+            const options = modelSelect.querySelectorAll('option');
+            let firstVisible = null;
+            options.forEach(opt => {
+                if (opt.dataset.provider === provider) {
+                    opt.style.display = '';
+                    if (!firstVisible) firstVisible = opt.value;
+                } else {
+                    opt.style.display = 'none';
+                }
+            });
+            // 저장된 모델 또는 첫번째 선택
+            const savedModel = localStorage.getItem(`${provider}_model`);
+            if (savedModel && modelSelect.querySelector(`option[value="${savedModel}"]`)) {
+                modelSelect.value = savedModel;
+            } else {
+                modelSelect.value = firstVisible;
+            }
+        }
 
         function toggleRaw() {
             rawResultEl.style.display = rawResultEl.style.display === 'none' ? 'block' : 'none';
@@ -161,11 +193,17 @@
 
         // Load saved settings
         providerSelect.value = localStorage.getItem('llm_provider') || 'anthropic';
+        filterModels(providerSelect.value);
         apiKeyInput.value = localStorage.getItem(`${providerSelect.value}_api_key`) || '';
 
         providerSelect.addEventListener('change', () => {
             localStorage.setItem('llm_provider', providerSelect.value);
+            filterModels(providerSelect.value);
             apiKeyInput.value = localStorage.getItem(`${providerSelect.value}_api_key`) || '';
+        });
+
+        modelSelect.addEventListener('change', () => {
+            localStorage.setItem(`${providerSelect.value}_model`, modelSelect.value);
         });
 
         apiKeyInput.addEventListener('change', () => {
@@ -199,7 +237,7 @@
             setTimeout(() => scanBtn.click(), 100);
         });
 
-        async function callClaude(apiKey, base64, type) {
+        async function callClaude(apiKey, base64, type, model) {
             const response = await fetch('https://api.anthropic.com/v1/messages', {
                 method: 'POST',
                 headers: {
@@ -209,7 +247,7 @@
                     'anthropic-dangerous-direct-browser-access': 'true'
                 },
                 body: JSON.stringify({
-                    model: 'claude-sonnet-4-20250514',
+                    model: model,
                     max_tokens: 1024,
                     messages: [{
                         role: 'user',
@@ -242,7 +280,7 @@ Respond in this exact JSON format only:
             return data.content[0].text;
         }
 
-        async function callOpenAI(apiKey, base64, type) {
+        async function callOpenAI(apiKey, base64, type, model) {
             const response = await fetch('https://api.openai.com/v1/chat/completions', {
                 method: 'POST',
                 headers: {
@@ -250,7 +288,7 @@ Respond in this exact JSON format only:
                     'Authorization': `Bearer ${apiKey}`
                 },
                 body: JSON.stringify({
-                    model: 'gpt-4o',
+                    model: model,
                     max_tokens: 1024,
                     messages: [{
                         role: 'user',
@@ -291,8 +329,10 @@ Respond in this exact JSON format only:
             }
             if (!imageBase64) return;
 
+            const model = modelSelect.value;
+
             scanBtn.disabled = true;
-            status.textContent = `Calling ${provider === 'anthropic' ? 'Claude' : 'GPT-4'} API...`;
+            status.textContent = `Calling ${model}...`;
             serialEl.textContent = '...';
             rawResultEl.textContent = '';
             const startTime = Date.now();
@@ -300,9 +340,9 @@ Respond in this exact JSON format only:
             try {
                 let text;
                 if (provider === 'anthropic') {
-                    text = await callClaude(apiKey, imageBase64, mediaType);
+                    text = await callClaude(apiKey, imageBase64, mediaType, model);
                 } else {
-                    text = await callOpenAI(apiKey, imageBase64, mediaType);
+                    text = await callOpenAI(apiKey, imageBase64, mediaType, model);
                 }
 
                 const elapsed = ((Date.now() - startTime) / 1000).toFixed(2);
